include/fitpack_grid_polar_c.h

typedef struct fx_status { bool ok; int code; char message[FX_LEN_STATUS_MSG]; } fx_status;
/**
 * @brief Deallocate fitpack_grid_polar object
 * @param self Pointer to wrapper (will be nullified)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_destroy(fitpack_grid_polar_c* self, fx_status* status);
/**
 * @brief Shallow copy (pointer semantics — Fortran "associate" construct)
 * @param self Destination wrapper (will point to same object as 'other')
 * @param other Source wrapper (read-only)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_associate(fitpack_grid_polar_c* self, const fitpack_grid_polar_c* other, fx_status* status);
/**
 * @brief Move allocation (transfer ownership)
 * @param to Destination wrapper (receives ownership)
 * @param from Source wrapper (becomes null)
 * @param status Optional error status (NULL = error stop on failure)
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_move_alloc(fitpack_grid_polar_c* to, fitpack_grid_polar_c* from, fx_status* status);
/* ===========================================================================================
 * Method Wrappers (standalone-compatible only)
 * =========================================================================================== */

/**
 * @brief set_origin_BC
 * @param z0 
 * @param exact 
 * @param differentiable 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_set_origin_BC(fitpack_grid_polar_c* self, double* z0, bool* exact, bool* differentiable);
/**
 * @brief fit
 * @param smoothing 
 * @param keep_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_grid_polar_c_fit(const fitpack_grid_polar_c* self, double* smoothing, bool* keep_knots);
/**
 * @brief least_squares
 * @param smoothing 
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_grid_polar_c_least_squares(const fitpack_grid_polar_c* self, double* smoothing, bool* reset_knots);
/**
 * @brief interpolate
 * @param reset_knots 
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_grid_polar_c_interpolate(const fitpack_grid_polar_c* self, bool* reset_knots);
/**
 * @brief gridded_eval_one
 * @param u 
 * @param v 
 * @param ierr 
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_grid_polar_c_gridded_eval_one(const fitpack_grid_polar_c* self, double u, double v, int32_t* ierr);
/**
 * @brief comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_grid_polar_c_comm_size(const fitpack_grid_polar_c* self);
/**
 * @brief write
 * @param filename 
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_write(fitpack_grid_polar_c* self, const char* filename);
/**
 * @brief mse
 * @return Result value
 */
FITPACK_CAPI_EXPORT double fitpack_grid_polar_c_mse(const fitpack_grid_polar_c* self);
/**
 * @brief core_comm_size
 * @return Result value
 */
FITPACK_CAPI_EXPORT int32_t fitpack_grid_polar_c_core_comm_size(const fitpack_grid_polar_c* self);
/**
 * @brief destroy_base
 */
FITPACK_CAPI_EXPORT void fitpack_grid_polar_c_destroy_base(fitpack_grid_polar_c* self);