src/capi/fitpack_gridded_polar_c.f90


        stat0 = fx_status_ok
        call fitpack_grid_polar_c_destroy(this, stat0)
        if (.not. stat0%ok) goto 100
        this%cptr = that%cptr
        this%is_pointer = .true._c_bool
        this%name_cptr = that%name_cptr
100     call handle_error(stat0, status)
    end subroutine fitpack_grid_polar_c_associate

    !> [bind(C)] Move allocation (transfer ownership)
    !> @param status Optional. If absent, errors trigger error stop.
    subroutine fitpack_grid_polar_c_move_alloc(to, from, status) &
            bind(C, name='fitpack_grid_polar_c_move_alloc')
        type(fitpack_grid_polar_c), intent(inout) :: to, from
        type(fx_status), intent(out), optional :: status
        type(fx_status) :: stat0

        stat0 = fx_status_ok
        call fitpack_grid_polar_c_destroy(to, stat0)
        if (.not. stat0%ok) goto 100
        to = from
        from = fitpack_grid_polar_c_null
100     call handle_error(stat0, status)
    end subroutine fitpack_grid_polar_c_move_alloc

    ! ===========================================================================================
    ! SECTION 6: Fortran Constructors (NOT bind(C))
    ! ===========================================================================================

    !> Create from Fortran object (owns copy)
    type(fitpack_grid_polar_c) function fitpack_grid_polar_c_f2c(f) result(c)
        type(fitpack_grid_polar), intent(in) :: f
        type(fitpack_grid_polar), pointer :: fptr
        logical :: ok

        ok = fitpack_grid_polar_c_pointer(c, fptr)
        if (ok) fptr = f
    end function fitpack_grid_polar_c_f2c

    !> Create from Fortran object (optionally as pointer)
    type(fitpack_grid_polar_c) function fitpack_grid_polar_c_fptr2c(f, want_pointer) result(c)
        type(fitpack_grid_polar), intent(inout), target :: f
        logical, intent(in) :: want_pointer

        if (want_pointer) then
            c%cptr = c_loc(f)
            c%is_pointer = .true._c_bool
        else
            c = fitpack_grid_polar_c_f2c(f)
        end if
    end function fitpack_grid_polar_c_fptr2c

    ! ===========================================================================================
    ! SECTION 6b: C String Utilities (emitted on demand — only the helpers
    ! this module's wrappers actually call)
    ! ===========================================================================================

    !> Pointer view from a `type(c_ptr)` C string. Aliases the C buffer;
    !> always associated (0-length sentinel for null/empty input). The
    !> sentinel is a NUL byte viewed as zero-length, so it is simultaneously
    !> an empty Fortran string and a valid empty C string: a callee that
    !> re-derives the length with `strlen` (any `character(len=1) :: s(*)`
    !> dummy) stops at the NUL instead of reading on into adjacent statics.
    function from_c_string_ptr_cptr(c_str) result(fstring)
        character(len=:, kind=c_char), pointer :: fstring
        type(c_ptr), intent(in) :: c_str

        interface
            integer(c_size_t) function strlen(s) bind(C, name='strlen')
                import :: c_ptr, c_size_t
                type(c_ptr), intent(in), value :: s
            end function strlen
        end interface

        character(len=1, kind=c_char), target, save :: NO_STRING = c_null_char

        character(kind=c_char), pointer :: arr(:)
        integer(c_size_t) :: ltot

        fstring => NO_STRING(1:0)
        if (.not. c_associated(c_str)) return

        ltot = strlen(c_str)
        if (ltot == 0) return

        call c_f_pointer(c_str, arr, [ltot])
        if (.not. associated(arr)) return

        call c_array_to_string(int(ltot), arr, fstring)
    end function from_c_string_ptr_cptr

    !> Turn array of characters to a character string
    subroutine c_array_to_string(scalar_len, scalar, ptr)
        integer, intent(in) :: scalar_len
        character(kind=c_char, len=scalar_len), intent(in), target :: scalar(1)
        character(:, kind=c_char), intent(out), pointer :: ptr
        ptr => scalar(1)
    end subroutine c_array_to_string

    !> Pointer view from a `character(*)` assumed-size C buffer. The dummy is
    !> optional: an absent argument (NULL passed to the optional bind(C)
    !> dummy) maps to the 0-length sentinel — always associated, safe for
    !> required `character(*)` callee dummies.
    function from_c_string_ptr_arr(c_str) result(fstring)
        character(len=:, kind=c_char), pointer :: fstring
        character(len=1, kind=c_char), dimension(*), intent(in), optional, target :: c_str

        if (present(c_str)) then
            fstring => from_c_string_ptr_cptr(c_loc(c_str))
        else
            fstring => from_c_string_ptr_cptr(c_null_ptr)
        end if
    end function from_c_string_ptr_arr

    ! ===========================================================================================
    ! SECTION 7: Method Wrappers (bind(C))
    ! ===========================================================================================
    !> set_origin_BC
    subroutine fitpack_grid_polar_c_set_origin_BC(this, z0, exact, differentiable) bind(C,  &
        & name='fitpack_grid_polar_c_set_origin_BC')
        type(fitpack_grid_polar_c), intent(inout) :: this
        real(c_double), intent(in), optional :: z0
        logical(c_bool), intent(in), optional :: exact, differentiable
        type(fitpack_grid_polar), pointer :: fthis
        logical :: f_exact, f_differentiable

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(exact)) f_exact = logical(exact)
            if (present(differentiable)) f_differentiable = logical(differentiable)
            if (present(exact) .and. present(differentiable)) then
                call fthis%set_origin_BC(z0=z0, exact=f_exact, differentiable=f_differentiable)
            else
                call fthis%set_origin_BC(z0=z0)
            end if
        end if
    end subroutine fitpack_grid_polar_c_set_origin_BC

    !> fit
    integer(c_int32_t) function fitpack_grid_polar_c_fit(this, smoothing, keep_knots) bind(C, name='fitpack_grid_polar_c_fit')
        type(fitpack_grid_polar_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: keep_knots
        type(fitpack_grid_polar), pointer :: fthis
        logical :: f_keep_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(keep_knots)) f_keep_knots = logical(keep_knots)
            if (present(keep_knots)) then
                fitpack_grid_polar_c_fit = fthis%fit(smoothing=smoothing, keep_knots=f_keep_knots)
            else
                fitpack_grid_polar_c_fit = fthis%fit(smoothing=smoothing)
            end if
        else
            fitpack_grid_polar_c_fit = 0
        end if
    end function fitpack_grid_polar_c_fit

    !> least_squares
    integer(c_int32_t) function fitpack_grid_polar_c_least_squares(this, smoothing, reset_knots) bind(C,  &
        & name='fitpack_grid_polar_c_least_squares')
        type(fitpack_grid_polar_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_grid_polar), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_grid_polar_c_least_squares = fthis%least_squares(smoothing=smoothing, reset_knots=f_reset_knots)
            else
                fitpack_grid_polar_c_least_squares = fthis%least_squares(smoothing=smoothing)
            end if
        else
            fitpack_grid_polar_c_least_squares = 0
        end if
    end function fitpack_grid_polar_c_least_squares

    !> interpolate
    integer(c_int32_t) function fitpack_grid_polar_c_interpolate(this, reset_knots) bind(C, name='fitpack_grid_polar_c_interpolate')
        type(fitpack_grid_polar_c), intent(in) :: this
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_grid_polar), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_grid_polar_c_interpolate = fthis%interpolate(reset_knots=f_reset_knots)
            else
                fitpack_grid_polar_c_interpolate = fthis%interpolate()
            end if
        else
            fitpack_grid_polar_c_interpolate = 0
        end if
    end function fitpack_grid_polar_c_interpolate

    !> gridded_eval_one
    real(c_double) function fitpack_grid_polar_c_gridded_eval_one(this, u, v, ierr) bind(C,  &
        & name='fitpack_grid_polar_c_gridded_eval_one')
        type(fitpack_grid_polar_c), intent(in) :: this
        real(c_double), intent(in), value :: u, v
        integer(c_int32_t), intent(out), optional :: ierr
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_gridded_eval_one = fthis%eval(u, v, ierr)
        else
            fitpack_grid_polar_c_gridded_eval_one = 0.0_c_double
        end if
    end function fitpack_grid_polar_c_gridded_eval_one

    !> comm_size
    integer(c_int32_t) function fitpack_grid_polar_c_comm_size(this) bind(C, name='fitpack_grid_polar_c_comm_size')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_comm_size = fthis%comm_size()
        else
            fitpack_grid_polar_c_comm_size = 0
        end if
    end function fitpack_grid_polar_c_comm_size

    !> write
    subroutine fitpack_grid_polar_c_write(this, filename) bind(C, name='fitpack_grid_polar_c_write')
        type(fitpack_grid_polar_c), intent(inout) :: this
        character(kind=c_char), dimension(*), optional, intent(in), target :: filename
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%write(f_char(filename))
        end if
    end subroutine fitpack_grid_polar_c_write

    !> mse
    real(c_double) function fitpack_grid_polar_c_mse(this) bind(C, name='fitpack_grid_polar_c_mse')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_mse = fthis%mse()
        else
            fitpack_grid_polar_c_mse = 0.0_c_double
        end if
    end function fitpack_grid_polar_c_mse

    !> core_comm_size
    integer(c_int32_t) function fitpack_grid_polar_c_core_comm_size(this) bind(C, name='fitpack_grid_polar_c_core_comm_size')
        type(fitpack_grid_polar_c), intent(in) :: this
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_grid_polar_c_core_comm_size = fthis%core_comm_size()
        else
            fitpack_grid_polar_c_core_comm_size = 0
        end if
    end function fitpack_grid_polar_c_core_comm_size

    !> destroy_base
    subroutine fitpack_grid_polar_c_destroy_base(this) bind(C, name='fitpack_grid_polar_c_destroy_base')
        type(fitpack_grid_polar_c), intent(inout) :: this
        type(fitpack_grid_polar), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%destroy_base()
        end if
    end subroutine fitpack_grid_polar_c_destroy_base
